tests/errors/type_check/operand_typing/operand_fnname_undeclared.sim

        fn f() {
            g: fn(i64);
            entry:
            g = missing;
            return
        }
        