tests/errors/type_check/operand_typing/operand_fnname_undeclared.err.expected
error: at 5:13: [TC-UndeclaredFunction] In function 'f', block 'entry': Undeclared function name 'missing'
   |
 5 |             g = missing;
   |             ^^^^^^^^^^^
